@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0
hide circle
hide methods

title Domain Model


class Collaborator {
    name
    dateOfBirth
    admissionDate
    address
    phoneNumber
    email
    cc
    cardNumber

}

class HumanResourceManager {


}




class Skill{
    name
}




Collaborator  <|-  HumanResourceManager
HumanResourceManager "1" -- "1..*" Skill : Registers >
Skill "1..*" -- "*" Collaborator : has <

@enduml